[gd_scene load_steps=12 format=3 uid="uid://c77rya46ib0rg"]

[ext_resource type="Shader" path="res://carousell_menu/carousell_card/level_container.gdshader" id="1_5ncna"]
[ext_resource type="Script" path="res://carousell_menu/carousell_card/carousell_card.gd" id="1_csrqu"]
[ext_resource type="StyleBox" uid="uid://c8splfuvu8vq2" path="res://carousell_menu/carousell_card/level_container_button.tres" id="2_4123d"]
[ext_resource type="StyleBox" uid="uid://sioc4scbj8tj" path="res://carousell_menu/carousell_card/level_container_button_flipped.tres" id="4_g683n"]
[ext_resource type="StyleBox" uid="uid://dly1bk12aei4i" path="res://carousell_menu/carousell_card/level_container_button_4Star.tres" id="5_p182h"]
[ext_resource type="AudioStream" uid="uid://clscmy06ki1ga" path="res://entities/death_pixels/pop.wav" id="6_0p7hj"]
[ext_resource type="Material" uid="uid://27wciaj36i0u" path="res://carousell_menu/carousell_card/shine.tres" id="6_h03gt"]
[ext_resource type="FontFile" uid="uid://82rtrwrx8hd7" path="res://fonts/Neucha-Regular.ttf" id="8_034vv"]
[ext_resource type="FontFile" uid="uid://udefm06tsf15" path="res://fonts/DeliusUnicase-Bold.ttf" id="9_777hu"]
[ext_resource type="PackedScene" uid="uid://cyukkc7p2ok7i" path="res://managers/scene_change_node/scene_change_node.tscn" id="10_fvbmh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d02en"]
shader = ExtResource("1_5ncna")

[node name="level_container" type="Control"]
material = SubResource("ShaderMaterial_d02en")
custom_minimum_size = Vector2(800, 1600)
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 800.0
pivot_offset = Vector2(200, 400)
script = ExtResource("1_csrqu")
normal_theme = ExtResource("2_4123d")
flipped_theme = ExtResource("4_g683n")
golden_theme = ExtResource("5_p182h")
shine_material = ExtResource("6_h03gt")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 400.0
offset_bottom = 800.0
pivot_offset = Vector2(200, 400)

[node name="Name" type="RichTextLabel" parent="Control"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
offset_left = 126.0
offset_top = 1110.0
offset_right = 626.0
offset_bottom = 1300.0
pivot_offset = Vector2(250, 25)
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("8_034vv")
theme_override_font_sizes/normal_font_size = 120
bbcode_enabled = true
text = "[center]name[/center]"

[node name="StarCount" type="RichTextLabel" parent="Control"]
z_index = 1
layout_mode = 0
offset_left = 99.0
offset_top = 226.0
offset_right = 802.0
offset_bottom = 784.0
pivot_offset = Vector2(200, 45)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(1, 0.682353, 0, 1)
theme_override_fonts/normal_font = ExtResource("9_777hu")
theme_override_font_sizes/normal_font_size = 400
bbcode_enabled = true
text = "***"

[node name="StarShadow" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 99.0
offset_top = 234.0
offset_right = 797.0
offset_bottom = 860.0
pivot_offset = Vector2(200, 45)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.466667, 0.309804, 0, 1)
theme_override_fonts/normal_font = ExtResource("9_777hu")
theme_override_font_sizes/normal_font_size = 400
bbcode_enabled = true
text = "***"
fit_content = true

[node name="LevelButton" type="Button" parent="Control"]
unique_name_in_owner = true
z_index = -1
layout_mode = 1
offset_left = -132.0
offset_top = 182.0
offset_right = 898.0
offset_bottom = 1294.0
theme_override_styles/normal = ExtResource("2_4123d")
theme_override_styles/hover = ExtResource("2_4123d")
theme_override_styles/pressed = ExtResource("2_4123d")
theme_override_styles/focus = ExtResource("2_4123d")

[node name="SceneChangeNode" parent="." instance=ExtResource("10_fvbmh")]

[node name="FipThrough" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0p7hj")
volume_db = -15.0

[connection signal="pressed" from="Control/LevelButton" to="." method="_on_button_pressed"]
